Minor cosmetics and changes.